--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,12 @@
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
-[*]
+[*.{c,css,html,js,json,md,rs,svg,ts,wat,zig}]
+indent_style = tab
+indent_size = 4
 end_of_line = lf
-insert_final_newline = true
 charset = utf-8
-indent_style = space
-indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
